ストーリー閲覧機能の拡張
